use correct euroflow.io domain

--- a/blockchaincfg.yaml
+++ b/blockchaincfg.yaml
@@ -4,11 +4,11 @@ template:
 frontend:
   explorer:
     caddy:
-      dns: explorer.testnet.eurochain.nbh-digital.com
+      dns: explorer.testnet.euroflow.io
       tls: support@nbh-digital.com
   faucet:
     caddy:
-      dns: faucet.testnet.eurochain.nbh-digital.com
+      dns: faucet.testnet.euroflow.io
       tls: support@nbh-digital.com
 generation:
   ignore:
@@ -77,11 +77,11 @@ blockchain:
         transactionSetSizeLimit: 250000
         poolSizeLimit: 20000000
       bootstrapPeers:
-      - bootstrap1.testnet.eurochain.nbh-digital.com:22112
-      - bootstrap2.testnet.eurochain.nbh-digital.com:22112
-      - bootstrap3.testnet.eurochain.nbh-digital.com:22112
-      - bootstrap4.testnet.eurochain.nbh-digital.com:22112
-      - bootstrap5.testnet.eurochain.nbh-digital.com:22112
+      - bootstrap1.testnet.euroflow.io:22112
+      - bootstrap2.testnet.euroflow.io:22112
+      - bootstrap3.testnet.euroflow.io:22112
+      - bootstrap4.testnet.euroflow.io:22112
+      - bootstrap5.testnet.euroflow.io:22112
     devnet:
       networkType: 3
       genesis:
